--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -5,7 +5,6 @@
 * {
     font-family: 'Lato', sans-serif;
 }
-
 html,
 body {
     height: 100%
@@ -22,7 +21,9 @@ body {
     height: 100%;
     background: rgba(22, 0, 0, 0.3);
 }
-
+#msg-flash {
+    text-align: center;
+}
 .container .row {
     margin-top: 85px;
     position: relative;
@@ -180,7 +181,7 @@ body {
     background-color: #FFF;
 }
 
-.container form > div {
+.container form > div:not(.alert) {
     padding: 0 50px;
 }
 
