--- a/public/css/main.css
+++ b/public/css/main.css
@@ -572,6 +572,102 @@ nav .container .items_icons .search_container .navbar-form input.form-control {
 
 /*** Aside right style End ***/
 
+/* Modules page Start */
+
+.content-page .modules {
+    margin-top: 25px;
+    padding: 10px;
+}
+
+.content-page .modules .card_mold {
+    height: 340px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 1s ease-in-out;
+}
+
+.content-page .modules .card_mold .front {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+    display: none;
+}
+
+.content-page .modules .card_mold .front .header {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    background-color: #444;
+    border-radius: 10px 10px 0 0;
+}
+
+.content-page .modules .card_mold .front .header > span {
+    position: absolute;
+    top: 35px;
+    left: 126px;
+    width: 80px;
+    height: 80px;
+    border: .5px solid #EEE;
+    background-color: #cc5333;
+    font-size: 25px;
+    border-radius: 50%;
+    padding: 22px;
+    margin: 0px auto;
+}
+
+.content-page .modules .card_mold .front .body h3 {
+    margin-top: 50px;
+    font-weight: bold;
+}
+
+.content-page .modules .card_mold .front .body p.description {
+    color: #555;
+    font-size: 18px;
+    padding: 7px;
+}
+
+.content-page .modules .card_mold .front .body span {
+    color: #67809F;
+    font-size: 16px;
+}
+
+/** Back Card Style**/
+
+.content-page .modules .card_mold .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    z-index: 1;
+    overflow: auto;
+}
+
+.content-page .modules .card_mold .back ol {
+    list-style: upper-alpha;
+    padding: 10px 40px;
+    font-size: 16px;
+    font-family: initial;
+}
+
+.content-page .modules .card_mold .back ol li {
+    padding: 10px;
+    font-family: inherit;
+}
+
+/* Modules page Start */
+
 /****Responsive Start****/
 
 @media (max-width: 1200px) {
